Update version to specificly say it's lifebox's fork. So we can hook into it without it trying to use the original repo

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "react-data-table-component",
-	"version": "7.5.3",
+	"version": "lifebox-fork",
 	"description": "A simple to use declarative react based data table",
 	"main": "dist/index.cjs.js",
 	"module": "dist/index.es.js",
@@ -18,8 +18,8 @@
 		"react-data-table",
 		"react-data-table-component"
 	],
-	"repository": "https://github.com/jbetancur/react-data-table-component",
-	"author": "jbetancur",
+	"repository": "https://github.com/lifebox-healthcare/react-data-table-component",
+	"author": "jbetancur https://github.com/jbetancur/react-data-table-component",
 	"license": "Apache-2.0",
 	"prepublish": "tsc",
 	"scripts": {
