--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "react-data-table-component",
-	"version": "lifebox-fork",
+	"version": "999.9999.0",
 	"description": "A simple to use declarative react based data table",
 	"main": "dist/index.cjs.js",
 	"module": "dist/index.es.js",
